[package]
name = "astrup"
version = "0.1.0"
authors = ["Ole-Johan Skrede <ojskrede@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ojskrede/astrup"

[dependencies]
num = "0.1"
chrono = "0.4"
failure = "0.1"
palette = "0.2"
time = "0.1"
ndarray = "0.11"
rand = "0.4"
gtk = "0.3"
cairo-rs = { version = "0.3", features = ["png"] }
gio = "0.3"
